--- a/src/client/modules/Threads/components/CreateThreadForm.scss
+++ b/src/client/modules/Threads/components/CreateThreadForm.scss
@@ -1,5 +1,4 @@
 .create-thread-form{
-  text-align: center;
   padding: 0 15%;
   margin-bottom: 20px;
 
@@ -9,10 +8,15 @@
     .header{
       font-weight: 300;
       margin-top: 0;
+      text-align: center;
     }
 
     .post-text-input{
       margin-bottom: 20px;
+    }
+
+    .submit-button-container{
+      text-align: center;
     }
   }
 }
